<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/film_title"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                tools:text="The Empire Strikes Back"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

        <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/release_date"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/release_date_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                tools:text="1980-05-17"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

        <TextView
                android:id="@+id/opening_crawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/opening_crawl"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
                android:id="@+id/opening_crawl_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                tools:text="@string/opening_crawl_test"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>


    </LinearLayout>

</LinearLayout>