<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/character_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/character_name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="Luke Walker"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/birth_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/birth_year"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/birth_year_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="1122BBY"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/height"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/height_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="180"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/species_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/species_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/species_name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="Droid"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/language"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/language_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="Kannada"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/homeworld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/homeworld"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/homeworld_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="Droid"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <TextView
                    android:id="@+id/population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/population"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/population_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    tools:text="Droid"
                    android:textStyle="bold"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

            <TextView
                    android:id="@+id/films"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:text="@string/films"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/films_recycler_view"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>